added iphone fix for 360 video - 1

--- a/brit-greg.html
+++ b/brit-greg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" >
     <title>oLabs Main Office</title>
 
     <!-- <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script> -->
@@ -62,7 +63,7 @@
                 <a-assets>
                     <img id="play" src="./public/media/image/rectangular/system/icons/play.png" alt="">
                     <img id="pause" src="./public/media/image/rectangular/system/icons/pause.png" alt="">
-                    <video id="vrVid1" src="./public/media/video/360/brit+greg_wedding_1a1a1a.mp4" loop="true"></video>
+                    <video id="vrVid1" src="./public/media/video/360/brit+greg_wedding_1a1a1a.mp4" loop="true" playsinline></video>
                     <!-- <video id="vrVid2" src="./public/media/video/360/brit+greg_wedding_1a1a1b.mp4" loop="true"></video> -->
 
                 </a-assets>
